# version_managed

./: CMakeLists.txt  LICENSE  Makefile  input.txt  main.cpp  test1.txt  test2.txt  var-deploy-gdb-host.sh  var-deploy-gdb.sh
